---
source: crates/bitnet-cli/tests/cli_snapshot_tests.rs
assertion_line: 68
expression: help
---
Run simple text generation

# Examples

Auto-detect template for Q&A (recommended): bitnet run --model model.gguf --prompt "Who wrote Pride and Prejudice?"

Instruct template (explicit Q&A format): bitnet run --model model.gguf --prompt-template instruct \ --prompt "What is 2+2?" --max-tokens 16

LLaMA-3 chat format with system prompt: bitnet run --model model.gguf --prompt-template llama3-chat \ --system-prompt "You are a helpful assistant" \ --prompt "Explain photosynthesis" --max-tokens 128

Deterministic Q&A with greedy decoding: bitnet run --model model.gguf --prompt "Test question" \ --temperature 0.0 --greedy --seed 42

Apple M4 local answer path with strict CPU/NEON receipt: bitnet --device apple-m4-cpu-neon run \ --model models/BitNet-b1.58-2B-4T/ggml-model-i2_s.gguf \ --prompt "What is 2+2? Answer briefly." --max-tokens 32 \ --temperature 0.0 --greedy --deterministic \ --strict-loader --strict-tokenizer --json-out local-answer-cpu-neon.json

Raw completion (no Q&A formatting): bitnet run --model model.gguf --prompt-template raw \ --prompt "2+2=" --max-tokens 16

Usage: bitnet run [OPTIONS] --model <MODEL> --prompt <PROMPT>

Options:
  -c, --config <PATH>
          Configuration file path

  -m, --model <MODEL>
          Model file or directory path (.gguf file or HuggingFace model directory)

  -d, --device <DEVICE>
          Device/backend label (cpu, cuda/gpu, hip/rocm, oneapi, npu/openvino-npu, nvidia-rtx-5070-ti-cuda/wgpu, metal/mpsgraph, apple-m4-metal, apple-m4-mpsgraph, apple-m4-cpu-neon, apple-m3-air-metal, apple-m3-air-mpsgraph, apple-m3-air-cpu-neon, auto). Apple M4 and M3 Air labels are distinct proof lanes

      --model-format <FORMAT>
          Model format: auto (detect from path), gguf, safetensors

          [default: auto]

      --architecture <ARCH>
          Model architecture override (e.g. bitnet, llama, phi3); auto-detected if omitted

      --log-level <LEVEL>
          Log level (trace, debug, info, warn, error)

      --tokenizer <TOKENIZER>
          Tokenizer file path (optional, will look for sibling file if not provided)

      --batch-size <SIZE>
          Batch size for processing

  -p, --prompt <PROMPT>
          Input prompt

      --max-new-tokens <MAX_NEW_TOKENS>
          Maximum new tokens to generate (aliases: --max-tokens, --n-predict)

          [default: 32]
          [aliases: --max-tokens, --n-predict]

      --temperature <TEMPERATURE>
          Temperature for sampling (0 = greedy)

          [default: 1]

      --top-k <TOP_K>
          Top-k sampling (0 = disabled)

          [default: 0]

      --top-p <TOP_P>
          Top-p (nucleus) sampling

          [default: 1]

      --repetition-penalty <REPETITION_PENALTY>
          Repetition penalty

          [default: 1.1]

      --seed <SEED>
          Random seed for reproducibility

      --allow-mock
          Allow falling back to mock loader if real loader fails Also toggled by env BITNET_ALLOW_MOCK=1

          [env: BITNET_ALLOW_MOCK=]

      --strict-mapping
          Strict mapping mode: fail if any tensors are unmapped

      --strict-tokenizer
          Strict tokenizer mode: fail if no real tokenizer available

      --strict-loader
          Strict loader mode: fail-fast with enhanced loader (sets BITNET_DISABLE_MINIMAL_LOADER=1, BITNET_STRICT_MODE=1)

      --json-out <JSON_OUT>
          Output JSON results to file

      --proof-model-contract <PROOF_MODEL_CONTRACT>
          Declared model contract for diagnostic proof binding

      --proof-kernel-route <PROOF_KERNEL_ROUTE>
          Declared kernel route id for diagnostic proof binding

      --dump-ids
          Dump token IDs to stdout

      --bos
          Insert BOS token at start of prompt

      --greedy
          Use greedy decoding (overrides temperature)

      --deterministic
          Enable deterministic mode (single-threaded)

      --threads <THREADS>
          Number of threads to use (0 = all cores)

          [default: 0]

      --prompt-template <TEMPLATE>
          Prompt template: auto (detect), raw, instruct, llama3-chat, bitnetcpp-answer

          [default: auto]

      --no-think
          Disable Qwen thinking mode by appending the Qwen no-thinking assistant suffix

          [aliases: --no-thinking]

      --system-prompt <TEXT>
          System prompt for chat models

      --stop <SEQ>
          Stop sequences (can be repeated for multiple sequences)

      --stop-id <ID>
          Stop token IDs (numeric token IDs, can be repeated)

      --dump-logit-steps <DUMP_LOGIT_STEPS>
          Dump logit steps during generation (max steps)

          [aliases: --logits-dump-steps]

      --logits-topk <K>
          Top-k tokens to include in logit dump

          [default: 10]

      --assert-greedy
          Assert greedy argmax invariant when dumping logits

      --qwen-trace-jsonl <PATH>
          Emit bounded Qwen first-token checkpoint summaries as JSONL

      --qwen-trace-layer <N>
          Qwen transformer layer index to trace when --qwen-trace-jsonl is set

      --qwen-trace-full-prompt
          Also trace the full prompt forward path before incremental decode

      --qwen-trace-prompt-ids <IDS>
          Comma-separated prompt token IDs to force for reference-aligned tracing

      --no-warnings
          Suppress performance warnings

      --profile-id <PROFILE>
          Profile label to record in JSON receipts (for example: smoke_1, prefill_512, decode_128)

      --allocation-audit
          Measure scoped hot-loop allocation counter deltas in profile receipts

  -h, --help
          Print help (see a summary with '-h')
